Simple hack to prevent images clipping on wide screens

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -246,3 +246,10 @@ ul li.on {
         width: 155px;
     }
 }
+
+/* breakpoint depends on .chats li max-height */
+@media only screen and (min-width: 1225px) {
+    .chats li img {
+        width: 245px;
+    }
+}
